# hal-bluetooth-zephyr-angelo

hal-bluetooth-zephyr-angelo/hal-bluetooth-zephyr-angelo/: .gitignore  CMakeLists.txt  LICENSE  LINK GITHUB.txt  README.md  prj.conf
hal-bluetooth-zephyr-angelo/hal-bluetooth-zephyr-angelo/docs/: README_docs.md
hal-bluetooth-zephyr-angelo/hal-bluetooth-zephyr-angelo/include/: hal_bt.h  hal_gpio.h
hal-bluetooth-zephyr-angelo/hal-bluetooth-zephyr-angelo/src/: hal_bt.c  hal_gpio.c  main.c
